QQuickBehavior: Force notify when first setting the binding

If the binding on the proxy property results in the default value of the
type, we still want to set the original property with that value.

Fixes: QTBUG-101771
Change-Id: Ia289eb734288a4bcc02444fcb73781a57216c908
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit aa4e5d598248008f8490eef07288f60af6f77900)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>